--- a/README
+++ b/README
@@ -1,2 +1,12 @@
 To add the dependencies in this project you need to run this command:
 npm install express
+
+Helper guide:
+http://blog.modulus.io/nodejs-and-express-create-rest-api
+To run:
+Node index.js
+
+
+
+08.10.2016
+Need to test all the functions
