Only testing left

--- a/README
+++ b/README
@@ -9,6 +9,5 @@ Node index.js
 
 
 
-08.10.2016
-Need to test all the functions, the post functions not working
-Parsing the frombody is bugging
+09.10.2016
+Need to test all the functions again
